--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
   <string name="ble_device_profile_action_refresh_services">Refresh Services</string>
   <string name="drawer_option_servers">Servers</string>
   <string name="drawer_option_others">Others</string>
+  <string name="drawer_option_classic_server">Classic Server</string>
 </resources>
