Changes in client and server api and connection UI. On connection profile there is an option to load the available features uuid and then on refresh load the new/updated ones. In sever connector a remote device flow is added to indicate the currently connected device. In BluetoothDeviceCard profile and the client route shared element transition is added. updated strings in BluetoothProfileRoute.kt Changed some route names. like bl_profile is changes to bt_profile. In BTDevicesRoute.kt updated all the rememberer callbacks, some code correction in its viewmodel. Changed text style in ConnectionProfileList.kt and SelectableUUIDCard.kt. Utils function in data layer is spell corrected and removed opt in decorator.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,11 +52,11 @@
   <string name="bt_le_device_desc">Bluetooth low energy devices in your range</string>
   <string name="location_settings">Location Settings</string>
   <string name="le_available_devices">Services</string>
-  <string name="bl_connect_profile_server_uuid_text">Special UUID</string>
-  <string name="bl_connect_profile_server_uuid_desc">This UUID can be used to connect to a server started by this app, on other phone</string>
+  <string name="bl_connect_profile_server_uuid_text">Special Feature</string>
+  <string name="bl_connect_profile_server_uuid_desc">Special feature (uuid) that is used to connect to a server started by this app, on other device</string>
   <string name="bl_connect_profile_server_uuid">Connect to Server</string>
-  <string name="bl_connect_profile_device_uuid_text">Available UUIDs</string>
-  <string name="bl_connect_profile_device_uuid_desc">This option is used when you want to connect to a particular uuid for the selected device</string>
+  <string name="bl_connect_profile_device_uuid_text">Available Features</string>
+  <string name="bl_connect_profile_device_uuid_desc">The list of features (uuid) the device provides for connection</string>
   <string name="bl_connect_profile_device_uuid_fetching">Fetching device information…</string>
   <string name="bl_connect_profile_device_uuids_not_found">No UUIDs found</string>
   <string name="bl_connect_profile_title">Connection Profile</string>
