Added remote device option in client and rename client state and ui changes As like in server when the peer is connected we save the device data in remote device is impl here too. Renamed ClientConnectionState.kt such that they actually make some sense And on disconnect setting it to null. Added animations in device profile cards. Corrected InstantToReadableText.kt. UI changes are removing experimental foundation api annotation tag and change in close client dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
   <string name="device_discoverable_success">Device is now discoverable %d seconds</string>
   <string name="device_discoverable_denied">Device Discoverability denied</string>
   <string name="close_connection_dialog_title">Close Connection</string>
-  <string name="close_connection_dialog_text">Are you sure you want to cancel the connection, it\'s always better to disconnect then leave the device</string>
+  <string name="close_connection_dialog_text">Are you sure you want to disconnect and close this connection</string>
   <string name="dialog_action_close">Close</string>
   <string name="dialog_action_cancel">Cancel</string>
   <string name="text_field_placeholder">Enter Text to Send</string>
