Adding peer connection info in server screen. As server only acts as a connector once the peer is ready it has no job, thus we need to keep an eye if the peer got disconnect and allow option to restart the server. We use PeerConnectionState.kt it's a simple version of BTClientConnectionState. and PeerConnectionReceiver.kt is a receiver that accounts for connected and disconnect of the remote device. The ServerConnectionState.kt names are being modified for simple understanding. In the devices feature we check first and then set the paired devices before displaying no paired devices. UI simplification in the server. Clearing off the messages when the server restarts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,6 @@
   <string name="drawer_option_classic_server">Classic Server</string>
   <string name="drawer_option_ble_server">BLE Server</string>
   <string name="bt_server_start_connection_extra_info">Make use the other device is discoverable, otherwise the other peer cannot be connected\n</string>
+  <string name="connection_server_stopped">Stopped</string>
+  <string name="connected_device_not_found">Not ready</string>
 </resources>
