--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,6 @@
   <string name="ble_property_signed_write">Write (Signed)</string>
   <string name="ble_property_extended">Extended Props</string>
   <string name="ble_characteristic_name_unknown">Unknown Characteristic</string>
-  <string name="ble_device_info_title">Device</string>
   <string name="le_characteristics_not_present">No characteristics found with this service</string>
   <string name="ble_device_profile">BLE Device Profile</string>
   <string name="back_arrow">Arrow back</string>
@@ -90,8 +89,7 @@
   <string name="ble_characteristic_not_selected_desc">Select a characteristic in order to continue</string>
   <string name="write_characteristic_dialog_title">Write Characteristic</string>
   <string name="write_characteristic_dialog_desc">Enter text value in utf-8 to write to.</string>
-  <string name="device_rssi_value">Current Device RSSI value</string>
-  <string name="bluetooth_device_mac_address">MAC : %s</string>
+  <string name="bluetooth_device_mac_address_title">MAC : </string>
   <string name="ble_disable_notification">Notification are disabled</string>
   <string name="ble_enable_indication">Indications are enabled</string>
   <string name="ble_enable_notification">Notifications are enabled</string>
@@ -175,7 +173,6 @@
   <!--  Settings auto scroll-->
   <string name="bt_classic_settings_auto_scroll_title">Auto Scroll To End</string>
   <string name="bt_classic_settings_auto_scroll_desc">Auto Scroll to the End of terminal</string>
-  <string name="dialog_action_start">Start</string>
   <string name="bt_server_close_connection_dialog_title">Stop Server</string>
   <string name="bt_server_close_connection_dialog_text">A running server must be stopped before leaving</string>
   <string name="bt_server_start_connection_text">Start Server</string>
@@ -191,10 +188,11 @@
   <string name="ble_device_profile_action_refresh_services">Refresh Services</string>
   <string name="drawer_option_servers">Servers</string>
   <string name="drawer_option_others">Others</string>
-  <string name="drawer_option_classic_server">Classic Server</string>
   <string name="drawer_option_ble_server">BLE Server</string>
   <string name="bt_server_start_connection_extra_info">Make use the other device is discoverable, otherwise the other peer cannot be connected\n</string>
   <string name="connection_server_stopped">Stopped</string>
   <string name="connected_device_not_found">Not ready</string>
   <string name="ble_settings_charset">Charset</string>
+  <string name="stop_ble_server">Stop</string>
+  <string name="start_ble_server">Start</string>
 </resources>
