--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
   <string name="ble_connection_disconnecting">Disconnecting</string>
   <string name="ble_connection_disconnected">Disconnected</string>
   <string name="ble_connection_failed">Failed</string>
-  <string name="ble_property_broadcast">BroadCast</string>
+  <string name="ble_property_broadcast">Broadcast</string>
   <string name="ble_property_read">Read</string>
   <string name="ble_property_write_no_resp">Write (No Response)</string>
   <string name="ble_property_write">Write</string>
@@ -195,4 +195,10 @@
   <string name="ble_settings_charset">Charset</string>
   <string name="stop_ble_server">Stop</string>
   <string name="start_ble_server">Start</string>
+  <string name="ble_server_title">BLE Server</string>
+  <string name="dialog_action_allow">Allow</string>
+  <string name="ble_advertise_permission_missing">Advertising permission missing</string>
+  <string name="ble_advertise_permission_missing_text">BLE server needs bluetooth advertising permission to advertise its packets for clients to connect</string>
+  <string name="ble_server_start_text">Select among the avaiable services and start the server</string>
+  <string name="ble_server_set_services">Configure Services</string>
 </resources>
